--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,81 +1,15 @@
 /* SF Pro Display — обычные веса */
 @font-face {
   font-family: 'SF Pro Display';
-  src: url('../fonts/SF-Pro-Display-Ultralight.otf') format('opentype');
-  font-weight: 100;          /* Ultralight */
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('../fonts/SF-Pro-Display-Thin.otf') format('opentype');
-  font-weight: 200;          /* Thin */
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('../fonts/SF-Pro-Display-Light.otf') format('opentype');
-  font-weight: 300;          /* Light */
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('../fonts/SF-Pro-Display-Regular.otf') format('opentype');
-  font-weight: 400;          /* Regular */
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'SF Pro Display';
   src: url('../fonts/SF-Pro-Display-Medium.otf') format('opentype');
-  font-weight: 500;          /* Medium */
+  font-weight: 100;       
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'SF Pro Display';
-  src: url('../fonts/SF-Pro-Display-Semibold.otf') format('opentype');
-  font-weight: 600;          /* Semibold */
+  font-family: 'SF Pro Rounded';
+  src: url('../fonts/SF-Pro-Rounded-Bold.otf') format('opentype');
+  font-weight: 100;         
   font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('../fonts/SF-Pro-Display-Bold.otf') format('opentype');
-  font-weight: 700;          /* Bold */
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('../fonts/SF-Pro-Display-Heavy.otf') format('opentype');
-  font-weight: 800;          /* Heavy */
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('../fonts/SF-Pro-Display-Black.otf') format('opentype');
-  font-weight: 900;          /* Black */
-  font-style: normal;
-  font-display: swap;
-}
-
-/* Italic-варианты (добавь, если используешь курсив) */
-@font-face {
-  font-family: 'SF Pro Display';
-  src: url('../fonts/SF-Pro-Display-UltralightItalic.otf') format('opentype');
-  font-weight: 100;
-  font-style: italic;
-  font-display: swap;
 }
